# resumint

./: .env.example  .gitignore  AGENTS.md  README.md  build_journal.md  pyproject.toml
dev/: BUILD_PROMPT.md  README.md
dev/reference/: latex_toolbox.py  less_basic_template.cls  less_basic_template.tex  metrics.py  parsers.py  utils.py
dev/specs/: AGENT_DESIGN.md  JOB_METADATA_EXTRACTION.md  PROJECT_SPEC.md  PROMPTS_DESIGN.md
src/resumint/: agent.py  config.py  extractors.py  latex_toolbox.py  main.py  parsers.py  utils.py
src/resumint/prompts/: prompts.py
templates/examples/: resume.tex
